--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@
 CC= gcc
 AR=/usr/bin/ar
 RANLIB=/usr/bin/ranlib
-CCOPT= -O2 -Wall @PCAP_INCLUDE@ @TCL_INC@ @USE_TCL@
+CCOPT= -O2 -Wall @PCAP_INCLUDE@ @TCL_INC@ @USE_TCL@ @USE_PCAP_BPF@
 DEBUG= -g
 #uncomment the following if you need libpcap based build under linux
 #(not raccomanded)
@@ -74,11 +74,25 @@ distclean:
 install: hping3
 	cp -f hping3 /usr/sbin/
 	chmod 755 /usr/sbin/hping3
+	@if [ -f /usr/sbin/hping ]; then \
+		rm /usr/sbin/hping; \
+	fi
+	@if [ -f /usr/sbin/hping2 ]; then \
+		rm /usr/sbin/hping2; \
+	fi
 	ln -s /usr/sbin/hping3 /usr/sbin/hping
 	ln -s /usr/sbin/hping3 /usr/sbin/hping2
 	@if [ -d ${INSTALL_MANPATH}/man8 ]; then \
 		cp ./docs/hping3.8 ${INSTALL_MANPATH}/man8; \
 		chmod 644 ${INSTALL_MANPATH}/man8/hping3.8; \
+		if [ -f ${INSTALL_MANPATH}/man8/hping.8 ]; then \
+			rm ${INSTALL_MANPATH}/man8/hping.8; \
+		fi; \
+		if [ -f ${INSTALL_MANPATH}/man8/hping2.8 ]; then \
+			rm ${INSTALL_MANPATH}/man8/hping2.8; \
+		fi; \
+		ln -s hping3.8 ${INSTALL_MANPATH}/man8/hping.8; \
+		ln -s hping3.8 ${INSTALL_MANPATH}/man8/hping2.8; \
 	else \
 		echo "@@@@@@ WARNING @@@@@@"; \
 		echo "Can't install the man page: ${INSTALL_MANPATH}/man8 does not exist"; \
